--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.11.0
 crispy-bootstrap5==2025.6
 Django==5.2.8
+django-allauth==65.13.1
 django-crispy-forms==2.5
 pillow==12.0.0
 sqlparse==0.5.3
